--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -38,6 +38,7 @@
 .recharge-store-box .cntr .store-content
 .silver-seed-store
 .silver-seed-store .content
+.draw-full-cntr
 	background-color var(--c-background) !important
 
 .attention-btn-ctnr .right-part
@@ -45,7 +46,11 @@
 .fans-medal-item .level
 .recharge-stores-ctnr .tab-box
 .sub-tab-box .item.active
+.draw-full-cntr .function-bar
 	background-color var(--c-hover) !important
+
+.draw-full-cntr .function-bar.draw
+	background-color: var(--c-accent) !important
 
 .room-bg::after
 	background-image linear-gradient(0deg, var(--c-background), transparent 20%) !important
@@ -64,11 +69,13 @@
 .icon-label
 .chaos-pk-rank .rank .season-name
 .chaos-pk-rank .rank .time
+.guard-rank-cntr .rank-cntr .tip
 	color var(--c-text) !important
 
 .hour-rank .hour-rank-content
 .attention-btn-ctnr .left-part .follow-text
 .fans-medal-item .label
+.draw-full-cntr .function-bar.draw span
 	color var(--c-white) !important
 
 .gift-info .btn-rule
@@ -77,6 +84,7 @@
 .chat-history-panel .chat-history-list .chat-item.welcome-msg .username.vip
 .room-introduction-tags .room-introduction-tag:hover .icon-label
 .chaos-pk-rank .link-to-history
+.guard-rank-cntr .rank-cntr .rank-list-box .online a.live-skin-main-a-text
 	color var(--c-accent) !important
 
 .room-introduction-tags
@@ -91,6 +99,7 @@
 
 .content-wrapper
 .user-protocol
+.draw-full-cntr
 	border 0 !important
 
 .common-popup-wrap.arrow-top::before
