--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -101,6 +101,7 @@ button
 .share-modal .copy-btn
 .coupon-label .container-right .to-use
 .bind-info .note-footer .btn-group .common-btn.active-btn
+.pbp-panel-feedback
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
