--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -11,6 +11,7 @@
 .nav-wrapper-right .nav-con .nav-item:nth-child(2)
 .nav-wrapper-right .nav-con .nav-item:nth-child(5)
 .van-popper-avatar .coins .contact .contact-tips::after
+.bili-header-m .profile-m .btns-profile .ver .tips:after
 	display none !important
 
 .channel-menu-mini
@@ -157,6 +158,7 @@
 	color var(--c-text) !important
 
 .van-popper-avatar .coins .contact .contact-tips
+.bili-header-m .profile-m .btns-profile .ver .tips
 	border-color var(--c-border) !important
 	background-color var(--c-background) !important
 	color var(--c-title) !important
