--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -141,6 +141,8 @@ ul.star-wrapper li i.icon-star-full
 .bilibili-player-video-danmaku-setting:hover>span svg
 .bilibili-player-block-filter-image:hover .bp-svgicon svg
 .bilibili-player-iconfont:hover .bp-svgicon svg
+.bilibili-player-iconfont:hover .bp-svgicon svg g
+.bilibili-player-video-btn:hover .bp-svgicon svg
 .selection-icon:hover .bp-svgicon svg
 .bilibili-player-video-danmaku-setting:hover .bp-svgicon svg
 .bilibili-player-video-danmaku-switch:hover .bp-svgicon svg
