--- a/bilibili-lite/src/video/media.styl
+++ b/bilibili-lite/src/video/media.styl
@@ -19,12 +19,17 @@
 .sort-type-wrp ul li:hover
 .btn-pay-wrapper.is-vip a
 .section-item
+.media-tab-module-wrp .media-tab-module-content .sl-ep-nav .slider-contro span
+.media-tab-module-wrp .media-tab-module-content .sl-ep-nav .slider-contro span.disabled:hover
   background-color var(--c-hover) !important
 
 .media-info-count .media-info-count-item em
 .media-tab-wrp
 .media-tab-nav
   background-color transparent !important
+
+.media-tab-module-wrp .media-tab-module-content .sl-ep-nav .slider-contro span:hover
+  background-color: var(--c-accent) !important
 
 .misl-ep-item .misl-ep-text .misl-ep-index
 .media-tab-detail-wrp .media-tab-detail-l .media-tab-module-wrp .media-tab-module-title
@@ -47,6 +52,7 @@
 .section-item .section-text .section-title
 .media-info-card .mic-expand
 .misl-ep-item .misl-ep-text .misl-ep-title
+.media-info-card .mic-evaluate-nodata
   color var(--c-text) !important
 
 .media-info-r span
