--- a/bilibili-lite/src/account/base.styl
+++ b/bilibili-lite/src/account/base.styl
@@ -19,6 +19,7 @@
 .pay-dialog-content
 .line-circle
 .coin-inner
+.img-clip-wrap .container-bg
   background-color var(--c-background) !important
 
 .security-left .security-list.on
@@ -27,7 +28,11 @@
 .points-pendant-item:hover
 .pendant-list li:hover
 .identmagBot
+.img-clip-wrap .first-change-lb
   background-color var(--c-hover) !important
+
+.border-line
+  background-color var(--c-border) !important
 
 .home-top-level-upgo
 .coin-text-p .coin-i
@@ -69,6 +74,7 @@
 .max-num
 .black-time
 .coin-rest-info-inco
+.pre-info
   color var(--c-text) !important
 
 .official-home-warapper .card-name
@@ -124,6 +130,10 @@ li.security-list:hover span
 .invtable
 .identmag
 .identmagTop
+.dialog-title
+.modal-head
+.img-clip-wrap .container-bg
+.img-clip-wrap .first-change-lb
   border-color var(--c-border) !important
 
 .active .tabs-normal-txt
