--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -181,6 +181,11 @@ textarea
 .auto-purchase .page-sub-title .question-icon .hover-tab
 .question-icon .hover-tab
 .purchase-panel-component .purchase-panel
+.dialog-wrap .dialog-contnent
+.security_content .container
+.bili-dialog .con
+.video-toolbar-module .share-box .share-popup
+.video-toolbar-module .app-box .qr-code-box
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
