--- a/bilibili-lite/src/public/form.styl
+++ b/bilibili-lite/src/public/form.styl
@@ -1,3 +1,6 @@
+.el-radio-button .el-radio-button__inner
+  background-color var(--c-background) !important
+
 .ui-dropdown .ul-dropdown-list .dropdown-item:hover
 .head .dropdown-menu li.ellipsis:hover
 .ui-select .ul-select-list .select-item:hover
@@ -19,6 +22,7 @@
 .radio-icon.checked::before
 .ui-radio input[type=radio]:checked+.ui-radio-icon:after
 .ui-checkbox input[type=checkbox]:checked+.ui-checkbox-icon
+.el-radio-button.is-active .el-radio-button__inner
   background-color var(--c-accent) !important
 
 .date-picker-v2-container div
@@ -31,6 +35,9 @@
 .date-picker-v2-container i
 select
   color var(--c-text) !important
+
+.el-radio-button.is-active .el-radio-button__inner
+  color var(--c-white) !important
 
 .ui-select .ul-select-list .select-item.active
 .ui-select .ul-select-list .select-item:hover
@@ -49,11 +56,13 @@ select
 .head .dropdown-menu .article-list
 .num-content .ticket-count
 .dropbox-component
+.el-radio-button .el-radio-button__inner
   border-color var(--c-border) !important
 
 .ui-radio.active .ui-radio-icon
 .ui-checkbox input[type=checkbox]:checked+.ui-checkbox-icon
 .date-panel .day.active
+.el-radio-button.is-active .el-radio-button__inner
   border-color var(--c-accent) !important
 
 .player-auxiliary-danmaku-date-picker-container .player-auxiliary-danmaku-date-picker-body .day-span
