--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -113,6 +113,7 @@ ul.star-wrapper li i.icon-star-full
 .multi-page .head-con .range-box i:hover
 .up-info>a .up-name.vip
 .coin-dialog-mask .coin-operated .coin-title span
+.main-container .review-module .review-list .review-item .review-header .review-author.is-vip
 	color var(--c-accent) !important
 
 .bilibili-player-feedback
