--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -102,12 +102,15 @@ button
 .coupon-label .container-right .to-use
 .bind-info .note-footer .btn-group .common-btn.active-btn
 .pbp-panel-feedback
+.dialog-btn
+.watch-later-list header .s-btn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
   overflow hidden !important
   vertical-align top
+  cursor pointer
 
   span
     color var(--c-white) !important
@@ -217,9 +220,11 @@ button
 .bl-button--primary:disabled
 .game-list-all
 .bind-info .note-footer .btn-group .common-btn
+.watch-later-list header .d-btn
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
+  cursor pointer
   transition all 0.3s ease-in-out
 
   span
