--- a/bilibili-lite/src/public/index.styl
+++ b/bilibili-lite/src/public/index.styl
@@ -12,3 +12,8 @@ domain("biligame.com") {
   @import 'feed'
   @import 'error'
 }
+@-moz-document url-prefix("https://www.bilibili.com/account/history"),
+url-prefix("https://www.bilibili.com/watchlater") {
+  /* 与主页相同的 banner */
+  @import 'bannerHeader'
+}
