--- a/bilibili-lite/src/video/index.styl
+++ b/bilibili-lite/src/video/index.styl
@@ -1,6 +1,7 @@
 @-moz-document url-prefix("https://www.bilibili.com/video/"),
 url-prefix("https://www.bilibili.com/bangumi/"),
-url-prefix("https://player.bilibili.com/") {
+url-prefix("https://player.bilibili.com/"),
+url-prefix("https://www.bilibili.com/watchlater") {
 	/* 视频播放界面样式 */
 	@import 'base'
 	@import 'danmaku'
